<resources>
    <string name="app_name"></string>
    <string name="nav_button_text">Go to Question View</string>
    <string name="option1_text">option 1</string>
    <string name="option2_text">option 2</string>
    <string name="option3_text">option 3</string>
    <string name="option4_text">option 4</string>
    <string name="question_text">question text</string>
    <string name="remaining">Time Remaining</string>

    <string-array name="Difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="Mode">
        <item>Single Player</item>
        <item>Multiplayer</item>
    </string-array>

    <string-array name="Categories">
        <item>History</item>
        <item>Science</item>
    </string-array>
    <string name="title_activity_results">ResultsActivity</string>



</resources>
