<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".settings_activity">


    <TextView
        android:id="@+id/questionText"
        android:layout_width="391dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
    />


    <TextView
        android:id="@+id/player_score"
        android:layout_width="101dp"
        android:layout_height="53dp"
        android:layout_marginBottom="9dp"
        android:padding="10dp"
        android:text="Score:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/current_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/current_score"
        android:layout_width="131dp"
        android:layout_height="55dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="7dp"
        android:padding="10dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player_score"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        android:visibility="invisible"
      />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="45dp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option1_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/begin_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="24dp"
        android:padding="10dp"
        android:text="Click To Begin!"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextQ"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="45dp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option2_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:text="@string/option3_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:textColor="#000000"
        android:padding="10dp"
        android:text="@string/option4_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/buttonNextQ"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:text="Next Question"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>